@@ -1,6 +1,7 @@
 {{$NEXT}}
 
   * Add dependencies for HTTPS and NTLM support, always
+  * Added example script
 
 1.111970  2011-07-16 17:19:24 Europe/London
 
